manifest/aws/shakeout-app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shakeout-app
  labels:
    app: shakeout-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shakeout-app
  template:
    metadata:
      labels:
        app: shakeout-app
    spec:
      containers:
      - name: shakeout-app
        image: quay.io/bryonbaker/shakeout-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: shakeout-app-storage
      volumes:
      - name: shakeout-app-storage
        persistentVolumeClaim:
          claimName: shakeout-app-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: shakeout-app-service
  labels:
    app: shakeout-app
spec:
  selector:
    app: shakeout-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shakeout-app-route
  labels:
    app: shakeout-app
spec:
  path: /hello
  to:
    kind: Service
    name: shakeout-app-service
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
  wildcardPolicy: None
